--- a/class-03-responsive-mobile-first/Stephen-Caleb/starter-code/index.html
+++ b/class-03-responsive-mobile-first/Stephen-Caleb/starter-code/index.html
@@ -19,9 +19,9 @@
         <h2>The shocking power of static pages</h2>
       </section>
       <nav class="main-nav">
-        <!-- TODO: Add a hamburger menu icon here. -->
-        <img src="https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-512.png" alt="" />
-        <ul>
+        <!-- DONE: Add a hamburger menu icon here. -->
+        <div class="hamburger-menu icon-menu"></div>
+        <ul class="nav-ul-container">
           <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
           <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
           <li><a href="http://twitter.com/brookr" target="_blank" class="icon-twitter3"> Twitter</a></li>
