--- a/class-05-new-article-creation/lecture/starter-code/new.html
+++ b/class-05-new-article-creation/lecture/starter-code/new.html
@@ -80,7 +80,7 @@
     <footer>
       &copy; 2015 Code Fellows | Static Blog | Happy Ipsum!
     </footer>
-
+                  <!-- slashes before script were perhaps messing up things -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
     <!-- DONE: Include script tags for 3rd party libraries to enable markdown rendering and code syntax highlighting -->
