--- a/class-07-functional-programming/pair-assignment/starter-code/admin.html
+++ b/class-07-functional-programming/pair-assignment/starter-code/admin.html
@@ -10,9 +10,8 @@
     <link rel="stylesheet" href="/styles/layout.css">
     <link rel="stylesheet" href="/styles/modules.css">
     </head>
-    <!-- TODO: Setup a template for each row of the Author Stats section of this page: -->
     <script id="author-template" type="text/x-handlebars-template">
-      <li><strong>{{name}}</strong>: {{numWords}} words written</li>
+      <li><strong>{{name}}</strong>: {{count}} words written</li>
     </script>
   <body>
     <header class="site-header clearfix">
@@ -49,11 +48,11 @@
 
     <script src="/vendor/scripts/jquery-2.1.4.js"></script>
     <script src="/vendor/scripts/handlebars.js"></script>
+    <script src="/vendor/scripts/marked.js"></script>
     <script src="/scripts/article.js"></script>
     <script src="/scripts/articleView.js"></script>
     <script>
-      // TODO: After we fetch and load all the articles, what view function do we want to run next?
-      // Let's pass in a callback function, to determine what happens AFTER all articles are loaded.
+      Article.fetchAll();
     </script>
   </body>
 </html>
